[package]
name = "colcon"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Simple colorspace conversions in Rust."
repository = "https://github.com/Beinsezii/colcon"
readme = "README.md"
categories = ["graphics", "algorithms"]
keywords = ["color", "conversion", "colorspace", "convert"]

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "hk"

[[bench]]
name = "conversions"
harness = false

# TODO export C fns
#[lib]
#crate-type = ["lib", "cdylib"]

[features]
D50 = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
