[package]
name = "colcon"
version = "0.10.1"
edition = "2021"
license = "MIT"
description = "Comprehensive colorspace conversions in Rust."
repository = "https://github.com/Beinsezii/colcon"
readme = "README.md"
categories = ["graphics", "algorithms", "encoding", "multimedia::images"]
keywords = ["color", "conversion", "color-space", "lab", "ucs"]

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "hk_data"
[[example]]
name = "hk_palette"
[[example]]
name = "hk_texture"
[[example]]
name = "spectrum"
[[example]]
name = "quantiles"

[[bench]]
name = "conversions"
harness = false

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
